# pcsx2

./: .clang-format  .gitmodules  CMakeLists.txt  build.sh  old_plugins.sln
cmake/: SearchForStuff.cmake  SelectPcsx2Plugins.cmake
linux_various/: check_format.sh
pcsx2/: CMakeLists.txt  Common.h  Config.h  Dump.cpp  Dump.h  Gif.cpp  Gif_Unit.cpp  Gif_Unit.h  Hw.cpp  IopHw.cpp  MTGS.cpp  Memory.cpp  Pcsx2Config.cpp  R3000A.h  R5900.cpp  R5900.h  R5900OpcodeTables.cpp  SPR.cpp  SaveState.cpp  SourceLog.cpp  System.cpp  VU1micro.cpp  VU1microInterp.cpp  VUmicro.h  VUops.cpp  Vif.cpp  Vif.h  Vif_Codes.cpp  Vif_Unpack.cpp  vtlb.cpp
pcsx2/DEV9/: dev9Null.cpp  dev9Null.h
pcsx2/FW/: fwNull.cpp  fwNull.h
pcsx2/PAD/: padNull.cpp  padNull.h
pcsx2/System/: SysCoreThread.cpp
pcsx2/USB/: usbNull.cpp  usbNull.h
pcsx2/gui/: AppConfig.cpp  AppConfig.h  AppInit.cpp  CpuUsageProvider.cpp  FrameForGS.cpp  GlobalCommands.cpp
pcsx2/gui/Panels/: ConfigurationPanels.h  CpuPanel.cpp  SpeedhacksPanel.cpp
pcsx2/ps2/: LegacyDmac.cpp
pcsx2/windows/VCprojects/: pcsx2.vcxproj  pcsx2.vcxproj.filters
pcsx2/x86/: BaseblockEx.cpp  BaseblockEx.h  R5900_Profiler.h  iCOP0.cpp  iCOP0.h  iCore.cpp  iCore.h  iFPU.cpp  iFPU.h  iFPUd.cpp  iMMI.cpp  iMMI.h  iMisc.cpp  iR3000A.cpp  iR3000A.h  iR3000Atables.cpp  iR5900.h  iR5900Arit.h  iR5900AritImm.h  iR5900Branch.h  iR5900Jump.h  iR5900LoadStore.h  iR5900Misc.cpp  iR5900Move.h  iR5900MultDiv.h  iR5900Shift.h  microVU.cpp  microVU.h  microVU_Alloc.inl  microVU_Analyze.inl  microVU_Branch.inl  microVU_Clamp.inl  microVU_Compile.inl  microVU_Execute.inl  microVU_Flags.inl  microVU_IR.h  microVU_Log.inl  microVU_Lower.inl  microVU_Macro.inl  microVU_Misc.h  (+15 more)
pcsx2/x86/ix86-32/: iCore-32.cpp  iR5900-32.cpp  iR5900Arit.cpp  iR5900AritImm.cpp  iR5900Branch.cpp  iR5900Jump.cpp  iR5900LoadStore.cpp  iR5900Move.cpp  iR5900MultDiv.cpp  iR5900Shift.cpp  iR5900Templates.cpp  recVTLB.cpp
plugins/: CMakeLists.txt
plugins/GSdx/: GS.cpp  GS.h  GSdx.cpp  GSdx.vcxproj  GSdx.vcxproj.filters  stdafx.h
plugins/GSdx/Renderers/Vulkan/: Device.cpp  Device.h  Texture.cpp  Texture.h
plugins/GSdx/vsprops/: common.props
plugins/GSone/: CMakeLists.txt  GS.cpp  GS.h  GSFifo.cpp  GSFifo.h  GSLog.cpp  GifTransfer.cpp  GifTransfer.h  Registers.cpp  Registers.h
plugins/GSone/Linux/: Config.cpp  Config.h  GSLinux.cpp  GSLinux.h  Linux.cpp  Linux.h
plugins/GSone/Opengl/: OpenGL.cpp  OpenGL.h
plugins/GSone/Vulkan/: GSVulkan.cpp  GSVulkan.h  Vulkan.cpp  Vulkan.h
plugins/GSone/Windows/: Config.cpp  GSwin.cpp  GSwin.h  Win32.cpp
plugins/GSone/null/: GSnull.cpp  GSnull.h
plugins/LilyPad/: CMakeLists.txt  LilyPad.cpp
plugins/LilyPad/Linux/: Config.cpp  Dialog.cpp  Dialog.h
plugins/onepad/res/: game_controller_db.txt
plugins/spu2-x/src/Linux/: Config.cpp  ConfigDebug.cpp  ConfigSoundTouch.cpp
plugins/zzogl-pg/: CMakeLists.txt  CRC.h  GLWin.h  GLWin32.cpp  GLWinX11.cpp  GS.h  GSUniformBufferOGL.h  GSVertexArrayOGL.h  GSmain.cpp  GifTransfer.cpp  GifTransfer.h  HostMemory.cpp  Profile.h  Profile_gl3.cpp  Profile_gl3.h  Regs.cpp  Regs.h  Screenshots.cpp  Screenshots.h  Util.h  ZZClut.cpp  ZZClut.h  ZZDepthTargets.cpp  ZZGet.h  ZZGl.h  ZZHacks.h  ZZKeyboard.cpp  ZZLog.cpp  ZZLog.h  ZZRenderTargets.cpp  ps2hw_gl4.h  rasterfont.h  x86.cpp  x86.h  zerogs.cpp  zerogs.h  zzogl_notes.txt
plugins/zzogl-pg/Linux/: Linux.cpp  Linux.h
plugins/zzogl-pg/Memory/: HostMemory.cpp  HostMemory.h  Mem.cpp  Mem.h  Mem_Swizzle.cpp  Mem_Swizzle.h  Mem_Tables.cpp  Mem_Transmit.h
plugins/zzogl-pg/Screenshots/: GSAvi.cpp  GSBmp.cpp  GSJpeg.cpp  GSPng.cpp  GSTga.cpp  Screenshots.cpp  Screenshots.h
plugins/zzogl-pg/Targets/: ZZDepthTargets.cpp  ZZDepthTargets.h  ZZMemoryTargets.cpp  ZZMemoryTargets.h  ZZRenderTargets.cpp  ZZRenderTargets.h  ZZTargets.h  targets.cpp  targets.h
plugins/zzogl-pg/Win32/: Conf.cpp  Win32.cpp  zerogsogl.vcxproj  zerogsogl.vcxproj.filters
plugins/zzogl-pg/ZZogl/: Drawing.cpp  Drawing.h  Flush.cpp  Flush.h  FlushHack.cpp  FlushHack.h  GSCreate.cpp  GSCreate.h  RenderCRTC.cpp  RenderCRTC.h  VB.cpp  VB.h  ZZSave.cpp  ZZoglCRTC.cpp  ZZoglCRTC.h  ZZoglCreate.cpp  ZZoglCreate.h  ZZoglDrawing.cpp  ZZoglFlush.cpp  ZZoglFlush.h  ZZoglFlushHack.cpp  ZZoglFlushHack.h  ZZoglMath.h  ZZoglMem.cpp  ZZoglMem.h  ZZoglSave.cpp  ZZoglShaders.h  ZZoglShadersGLSL4.cpp  ZZoglShoots.cpp  ZZoglVB.cpp  ZZoglVB.h
plugins/zzogl-pg/opengl/Linux/: Linux.cpp
plugins/zzogl-pg_legacy/opengl/: ZZRenderTargets.cpp  ZZoglShaders.h
